--- a/portfolio/kprogress/index.html
+++ b/portfolio/kprogress/index.html
@@ -160,27 +160,27 @@
 	<div class="col-sm-12 col-md-6 col-lg-4"><h2>Почему выбирают нас</h2></div>
 
 	<div class="col-sm-12 col-md-6 col-lg-4">
-		<img src="/images/construction.svg" alt="construction">
+		<img src="images/construction.svg" alt="construction">
 		<h4>Собственное производство</h4>
 		<p>Наше мощное производство позволяет выпускать практически все комплектующие для будущего дома</p>
 	</div>
 	<div class="col-sm-12 col-md-6 col-lg-4">
-		<img src="/images/group.svg" alt="group">
+		<img src="images/group.svg" alt="group">
 		<h4>Проверенные бригады рабочих</h4>
 		<p>Наше мощное производство позволяет выпускать практически все комплектующие для будущего дома</p>
 	</div>
 	<div class="col-sm-12 col-md-6 col-lg-4">
-		<img src="/images/boxes.svg" alt="boxes">
+		<img src="images/boxes.svg" alt="boxes">
 		<h4>Поставка товаров по всей России</h4>
 		<p>Наше мощное производство позволяет выпускать практически все комплектующие для будущего дома</p>
 	</div>
 	<div class="col-sm-12 col-md-6 col-lg-4">
-		<img src="/images/bricks.svg" alt="bricks">
+		<img src="images/bricks.svg" alt="bricks">
 		<h4>Работа с теплоизоляцией с 1980 года</h4>
 		<p>Наше мощное производство позволяет выпускать практически все комплектующие для будущего дома</p>
 	</div>
 	<div class="col-sm-12 col-md-6 col-lg-4">
-		<img src="/images/instrument.svg" alt="instrument key">
+		<img src="images/instrument.svg" alt="instrument key">
 		<h4>Работа под ключ</h4>
 		<p>Наше мощное производство позволяет выпускать практически все комплектующие для будущего дома</p>
 	</div>
@@ -205,7 +205,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 26.jpg" alt="services-1">
+	<img src="images/Rectangle 26.jpg" alt="services-1">
 	<p>Изоляционные работы</p>
 	<span>Подробнее</span>
 	</a>
@@ -215,7 +215,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 2.jpg" alt="services-1">
+	<img src="images/Rectangle 2.jpg" alt="services-1">
 	<p>Кровельные работы</p>
 	<span>Подробнее</span>
 	</a>
@@ -225,7 +225,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 3.jpg" alt="services-1">
+	<img src="images/Rectangle 3.jpg" alt="services-1">
 	<p>Монтажные работы</p>
 	<span>Подробнее</span>
 	</a>
@@ -235,7 +235,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 4.jpg" alt="services-1">
+	<img src="images/Rectangle 4.jpg" alt="services-1">
 	<p>Электромонтажные работы</p>
 	<span>Подробнее</span>
 	</a>
@@ -245,7 +245,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 5.jpg" alt="services-1">
+	<img src="images/Rectangle 5.jpg" alt="services-1">
 	<p>Монолитные работы</p>
 	<span>Подробнее</span>
 	</a>
@@ -255,7 +255,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 6.jpg" alt="services-1">
+	<img src="images/Rectangle 6.jpg" alt="services-1">
 	<p>Изготовление (производство)</p>
 	<span>Подробнее</span>
 	</a>
@@ -265,7 +265,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 7.jpg" alt="services-1">
+	<img src="images/Rectangle 7.jpg" alt="services-1">
 	<p>Отделочные работы</p>
 	<span>Подробнее</span>
 	</a>
@@ -275,7 +275,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 8.jpg" alt="services-1">
+	<img src="images/Rectangle 8.jpg" alt="services-1">
 	<p>Вентиляция и кондиционирование</p>
 	<span>Подробнее</span>
 	</a>
@@ -285,7 +285,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 9.jpg" alt="services-1">
+	<img src="images/Rectangle 9.jpg" alt="services-1">
 	<p>Малоэтажное строительство</p>
 	<span>Подробнее</span>
 	</a>
@@ -295,7 +295,7 @@
 
 <div class="col-lg-4 col-sm-12">
 	<a class="services-item-link" href="/"> 
-	<img src="/images/Rectangle 10.jpg" alt="services-1">
+	<img src="images/Rectangle 10.jpg" alt="services-1">
 	<p>Материальное обеспечение строительства и продажа</p>
 	<span>Подробнее</span>
 	</a>
@@ -318,12 +318,12 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="slider-owner">
-					<div> <a href="#"><img src="/images/sl1.jpg" alt="sl1"> <p>Название</p></a></div>
-					<div> <a href="#"><img src="/images/sl2.jpg" alt="sl2"> <p>Название</p></a></div>
-					<div> <a href="#"><img src="/images/sl1.jpg" alt="sl1"> <p>Название</p></a></div>
-					<div> <a href="#"><img src="/images/sl2.jpg" alt="sl2"> <p>Название</p></a></div>
-					<div> <a href="#"><img src="/images/sl1.jpg" alt="sl1"> <p>Название</p></a></div>
-					<div> <a href="#"><img src="/images/sl2.jpg" alt="sl2"> <p>Название</p></a></div>
+					<div> <a href="#"><img src="images/sl1.jpg" alt="sl1"> <p>Название</p></a></div>
+					<div> <a href="#"><img src="images/sl2.jpg" alt="sl2"> <p>Название</p></a></div>
+					<div> <a href="#"><img src="images/sl1.jpg" alt="sl1"> <p>Название</p></a></div>
+					<div> <a href="#"><img src="images/sl2.jpg" alt="sl2"> <p>Название</p></a></div>
+					<div> <a href="#"><img src="images/sl1.jpg" alt="sl1"> <p>Название</p></a></div>
+					<div> <a href="#"><img src="images/sl2.jpg" alt="sl2"> <p>Название</p></a></div>
 			</div>
 
 			<a class="show_all__objects" href="/">Смотреть все объекты</a>
@@ -344,7 +344,7 @@
 	<div class="row">
 		<div class="col-lg-4 col-md-4 col-sm-12">
 
-			<img class="logo_footer" src="/images/logo-white.svg" alt="logo-white x">
+			<img class="logo_footer" src="images/logo-white.svg" alt="logo-white x">
 		</div>
 		<div class="col-lg-3 col-md-8 col-sm-12">
 			<ul class="footer_menu">
